# HPGL-Plotter

./: .gitignore  Makefile.am  Makefile.in  README  README.md  VERSION  aclocal.m4  configure  configure.ac
HPGL/: Cassini.hpgl  DSN-antenna.hpgl  HP8595E-FM.hpgl  R+S-analyzer.hpgl  hp.hpgl  space-shuttle.hpgl  tektronix.hpgl
autom4te.cache/: output.0  output.2  output.3  requests  traces.0  traces.2  traces.3
data/: Makefile.am  Makefile.in
data/applications/: HPGLplotter.desktop
data/gsettings/: us.heterodyne.hpgl-plotter.gschema.xml
include/: GPIBcomms.h  HPGLplotter.h  messageEvent.h
src/: CairoPlot.c  GPIBcommsThread.c  GTKcallbacks.c  GTKcallbacksOptions.c  HPGLplotter-GTK4.c  HPGLplotter-GTK4.xml  HPGLplotter.c  HPGLplotter.cmb  HPGLplotter.css  HPGLplotter.ui  HPlogo.c  Makefile.am  Makefile.in  PDF+SVG+PNGwidgetCallback.c  messageEvent.c  parseHPGL.c  printWidgetCallbacks.c  settings.c  us.heterodyne.hpgl-plotter.gschema.xml  utility.c
